--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8899
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://vtu-qp-db.cita3hjpc3hi.ap-south-1.rds.amazonaws.com:3306/vtupapers
+spring.datasource.url=jdbc:mysql://localhost:3306/vtupapers
+#spring.datasource.url=jdbc:mysql://vtu-qp-db.cita3hjpc3hi.ap-south-1.rds.amazonaws.com:3306/vtupapers(Vtuqp_db)
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql = true
